# cmm

./: README.md
build_type/: CMakeLists.txt  main.cpp
compile_flags/: CMakeLists.txt  main.cpp
install/: CMakeLists.txt  cmake-examples.conf
install/include/install/: Hello.h
install/src/: Hello.cpp  main.cpp
shared_lib/: CMakeLists.txt
shared_lib/include/shared/: Hello.h
shared_lib/src/: Hello.cpp  main.cpp
static_lib/: CMakeLists.txt
static_lib/include/static/: Hello.h
static_lib/src/: Hello.cpp  main.cpp
